# VibeVoice-API

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
vibevoice_api/: tts_engine.py
