[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice-api"
version = "0.0.1"
authors = [
  { name="vibevoice team", email="vibepod@microsoft.com" },
]
description = "A model for speech generation with an AR + diffusion architecture."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.7.0",
    "accelerate==1.6.0",
    "transformers==4.51.3",
    "vibevoice @ git+https://github.com/vibevoice-community/VibeVoice",
    "datasets==3.5.0", # avoid issues with torchcodec
    "peft", # for finetuning
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio",
    "av",
    "aiortc"
]


[project.urls]
"Homepage" = "https://github.com/vibevoice-community/VibeVoice-API"
"Bug Tracker" = "https://github.com/vibevoice-community/VibeVoice-API/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
# Install PyTorch with CUDA support on Linux/Windows (CUDA doesn't exist for Mac).
# NOTE: We must explicitly request them as `dependencies` above. These improved
# versions will not be selected if they're only third-party dependencies.
torch = [
  { index = "pytorchcu128"},
]
[[tool.uv.index]]
name = "pytorchcu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
